[gd_scene load_steps=3 format=3 uid="uid://d3tr414i1acdq"]

[ext_resource type="Script" path="res://scripts/menus/main_menu.gd" id="1_e5k7w"]
[ext_resource type="FontFile" uid="uid://cf2fxyeeubkuc" path="res://assets/fonts/PixelOperator8.ttf" id="2_68w5b"]

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_e5k7w")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="StartButton" type="Button" parent="CanvasLayer"]
offset_left = 168.0
offset_top = 300.0
offset_right = 632.0
offset_bottom = 372.0
theme_override_fonts/font = ExtResource("2_68w5b")
theme_override_font_sizes/font_size = 64
text = "New Game"

[node name="EndButton" type="Button" parent="CanvasLayer"]
offset_left = 296.0
offset_top = 394.0
offset_right = 504.0
offset_bottom = 466.0
theme_override_fonts/font = ExtResource("2_68w5b")
theme_override_font_sizes/font_size = 64
text = "Exit"

[node name="GameTitle" type="Label" parent="CanvasLayer"]
offset_left = 10.0
offset_top = 39.0
offset_right = 844.0
offset_bottom = 234.0
theme_override_fonts/font = ExtResource("2_68w5b")
theme_override_font_sizes/font_size = 96
text = "Pong clone #89238754"
autowrap_mode = 2

[connection signal="mouse_entered" from="CanvasLayer/StartButton" to="." method="_on_start_button_mouse_entered"]
[connection signal="pressed" from="CanvasLayer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="mouse_entered" from="CanvasLayer/EndButton" to="." method="_on_end_button_mouse_entered"]
[connection signal="pressed" from="CanvasLayer/EndButton" to="." method="_on_end_button_pressed"]
